# pytorch_vs_lightning_vs_mirascope

./: LICENSE  README.md  Untitled.ipynb  pyproject.toml  untitled.txt  uv_usage.txt
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml  uv_guide-checkpoint.html  uv_usage-checkpoint.txt
01_Basics/: gradient.ipynb  making_predictions.py
01_Basics_Gradient_Tensors/: 2_dim_tensors_matrix.py  Gradient_Descent.ipynb  linear_model_manually_updated_bias_weights.py  linear_model_with_learning_one_datapoint.py  tensor_shapes_and_extraction.py  untitled.txt
02_Basics_LR_Neuron_Training/: log_loss_interactive_window.ipynb  neuron_part_c_with_norm_output.py  neuron_part_f_loading.py  polars.ipynb  polars_marimo.py
02_Pytorch_examples/: neuron_part_a.py  neuron_part_b.py  neuron_part_d_with_norm_io.py  neuron_part_e_with_loss_log.py  neuron_part_f_saving.py  neuron_part_g_with_boolcolumn.py  normalization.ipynb  polars.ipynb  polars_marimo.py
03_Bascis_Activation_Classification/: _a_data_exploration.ipynb  _b_count_vectorizer.py  _c_tf_idf_vectorizer.py  _e_neuron_spam_classifier_with_activation.py  _f_neuron_spam_classifier_with_activation.py  _g_KPIs.ipynb  _h_neuron_spam_classifier_with_train_val_split.py  _k_embeddings_one_ata_time.py
04_Basics_NN_Layered_DD_Activation/: _a_NN._Activation_Structure.ipynb  _c_data_exploration.ipynb  _e_network_solution.py  _f_correct_network_solution.py  _g_correct_network_solution_RELU.py  _h_correct_network_solution_RELU_ADAM.py  _i_correct_network_solution_batch_learning.py
06_Multiclass_Cases/: MNIST_multiclass.py  (+2 more)
(+42 files in other folders)
