[project]
name = "pytorch-vs-lightning-vs-mirascope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "altair>=5.5.0",
    "gradio>=5.38.0",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "jupyter>=1.1.1",
    "lightning>=2.5.2",
    "llm>=0.26",
    "marimo>=0.14.13",
    "matplotlib>=3.10.3",
    "mirascope>=1.25.4",
    "numpy>=2.3.1",
    "polars>=1.31.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
]
